# compliance-backend

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
app/: README.md  db.sqlite3
app/app/: .env  settings.py  urls.py
app/main/: models.py  tests.py  views.py
app/main/migrations/: 0001_initial.py
app/testdb/: admin.py  models.py  tests.py
app/testdb/migrations/: 0001_initial.py
backend/: db.sqlite3
backend/backend/: settings.py
backend/main/: urls.py  views.py
deploy/: README.md
deploy/ansible/: image-build.yml
deploy/docker/: Dockerfile  test.py
deploy/tf/: api_gateway.tf  cloudfront.tf  ecr.tf  lambda.tf  main.tf  output.tf  rds.tf  s3.tf  security_groups.tf  vars.tf
dev/: ec2-setup.yml  main.tf  output.tf  vars.tf
dev/ansible/: ec2-setup.yml
django/: README.md
modules/service/: ec2.tf  outputs.tf  rds.tf  s3.tf  vars.tf
tf/dev/: ec2-setup.yml  main.tf  output.tf  vars.tf
tf/modules/service/: api_gateway.tf  ec2.tf  lambda.tf  outputs.tf  rds.tf  s3.tf  vars.tf  vpc.tf
