[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "veridise-toolbox"
version = "0.1.0"
description = ""
authors = ["Xiangan He <xiangan@banyan.computer>"]
readme = "README.md"
packages = [
  { include = "app", from = "app" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
docker = "6.0.0"

# test dependencies
black = { version = "22.6.0", optional = true }
isort = { version = "5.10.1", optional = true }

[tool.poetry.extras]
dev = ["black", "isort"]

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = ["docker"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
